# nickfem

./: .gitignore  pyproject.toml  readme.md  setup.cfg
gallery/: navier_img.py  recirculating_flow.py  steady_navier.py  stokes_flow.py  unsteady_navier.py
mesh/: L.geo  L.msh  cylflow_8202.msh
nickfem/: __init__.py  fem.py  gausstri.py  misc.py  operators.py  version.py
