[metadata]
name = nickfem
version = attr: nickfem.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Nytko
author_email='nnytko2@illinois.edu',
url = https://github.com/nicknytko/nickfem
description = Finite elements
keywords = finite element, pde
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.7.0
    scipy>=0.12.0
    pyamg>=5.0.0
tests_require =
    pytest>=2